--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@mantine/carousel": "^6.0.19",
     "@mantine/core": "^6.0.19",
     "@mantine/dates": "^6.0.19",
+    "@mantine/form": "^6.0.19",
     "@mantine/hooks": "^6.0.19",
     "@mantine/next": "^6.0.19",
+    "@supabase/auth-helpers-nextjs": "^0.7.4",
+    "@supabase/supabase-js": "^2.32.0",
     "@tabler/icons-react": "^2.30.0",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
@@ -29,6 +32,7 @@
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
+    "react-toastify": "^9.1.3",
     "typescript": "5.1.6"
   },
   "devDependencies": {
