--- a/package.json
+++ b/package.json
@@ -37,10 +37,12 @@
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.34.1",
-    "@types/leaflet": "^1.9.3"
+    "@types/leaflet": "^1.9.3",
+    "@types/uuid": "^9.0.4"
   }
 }
