--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/server": "^11.11.0",
-    "@mantine/carousel": "^6.0.19",
-    "@mantine/core": "^6.0.19",
-    "@mantine/dates": "^6.0.19",
-    "@mantine/form": "^6.0.19",
-    "@mantine/hooks": "^6.0.19",
+    "@mantine/carousel": "^7.1.3",
+    "@mantine/core": "^7.1.3",
+    "@mantine/dates": "^7.1.3",
+    "@mantine/form": "^7.1.3",
+    "@mantine/hooks": "^7.1.3",
     "@mantine/next": "^6.0.19",
-    "@supabase/auth-helpers-nextjs": "^0.7.4",
-    "@supabase/supabase-js": "^2.32.0",
+    "@supabase/auth-helpers-nextjs": "^0.8.1",
+    "@supabase/supabase-js": "^2.38.1",
     "@tabler/icons-react": "^2.30.0",
     "@tanstack/react-query": "^4.33.0",
     "@tanstack/react-query-devtools": "^4.33.0",
@@ -29,7 +29,7 @@
     "cookies-next": "^2.1.2",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
-    "next": "13.4.13",
+    "next": "^13.5.4",
     "next-cloudinary": "^4.18.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
