--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^4.34.1",
     "@types/leaflet": "^1.9.3",
-    "@types/uuid": "^9.0.4"
+    "@types/uuid": "^9.0.4",
+    "postcss-preset-mantine": "^1.9.0"
   }
 }
